# PX4-Space-Systems

./: .gitignore
DockerFiles/: README.md  docker_file_discower_GUI  docker_file_kasm_ubuntu_jammy  docker_file_kasm_ubuntu_jammy_DISCOWER  run_kasm_ros.sh
ROMFS/px4fmu_common/init.d/: rc.mc_apps  rc.sc_apps  rc.sc_defaults  rc.uuv_apps
ROMFS/px4fmu_common/init.d-posix/: px4-rc.mavlink
ROMFS/px4fmu_common/init.d-posix/airframes/: 60002_gz_uuv_bluerov2_heavy  60002_uuv_bluerov2_heavy  71000_gazebo-classic_2d_spacecraft  71002_gz_spacecraft_2d  81000_gz_bluerov_heavy  CMakeLists.txt
ROMFS/px4fmu_common/init.d/airframes/: 90000_freeflyer  CMakeLists.txt
boards/px4/sitl/: default.px4board
msg/: VehicleThrustSetpoint.msg  VehicleTorqueSetpoint.msg
src/lib/: CMakeLists.txt
src/lib/mixer_module/: mixer_module.cpp
src/lib/mixer_module/functions/: FunctionMotors.hpp
src/lib/rate_control/: rate_control.cpp
src/modules/control_allocator/: ControlAllocator.cpp  module.yaml
src/modules/ekf2/EKF/: control.cpp
src/modules/ekf2/EKF/python/ekf_derivation/: derivation.py
src/modules/mc_pos_control/: CMakeLists.txt  MulticopterPositionControl.hpp
src/modules/mc_pos_control/PositionMPC/: PositionMPC.cpp  PositionMPC.hpp
src/modules/mc_pos_mpc_control/: CMakeLists.txt  Kconfig  mc_pos_mpc_control.cpp  mc_pos_mpc_control.hpp  mc_pos_mpc_control_params.c
src/modules/sc_att_control/: sc_att_control_main.cpp
src/modules/sc_control_allocator/: CMakeLists.txt  ControlAllocator.cpp  ControlAllocator.hpp  Kconfig  SpacecraftControlAllocator.cpp  SpacecraftControlAllocator.hpp  module.yaml
src/modules/sc_control_allocator/ActuatorEffectiveness/: ActuatorEffectiveness.hpp  ActuatorEffectivenessThrusters.cpp  ActuatorEffectivenessThrusters.hpp
src/modules/sc_control_allocator/ControlAllocation/: CMakeLists.txt  ControlAllocationMetricTest.cpp
src/modules/sc_external_wrench/: CMakeLists.txt  Kconfig  sc_external_wrench.cpp  sc_external_wrench.hpp
src/modules/sc_mpc_control/: CMakeLists.txt  Kconfig  SpacecraftModelPredictiveControl.cpp  SpacecraftModelPredictiveControl.hpp  sc_mpc_control_params.c  sc_mpc_control_params_extra.txt
src/modules/sc_mpc_control/SpacecraftMPC/: CMakeLists.txt  SpacecraftMPC.cpp  SpacecraftMPC.hpp
src/modules/sc_mpc_control/SpacecraftMPC/params/: derivation.py
src/modules/sc_pos_control/: CMakeLists.txt  SpacecraftPositionControl.cpp  SpacecraftPositionControl.hpp
src/modules/sc_pos_control/PositionControl/: PositionControl.cpp  PositionControl.hpp
src/modules/sc_pos_control/PositionMPC/: PositionMPC.cpp  PositionMPC.hpp
src/modules/sc_rate_control/: SpacecraftRateControl.cpp  SpacecraftRateControl.hpp  sc_rate_control_params.c
src/modules/simulation/gz_bridge/: CMakeLists.txt  GZMixingInterfaceESC.cpp  gz_env.sh.in  server.config
src/modules/simulation/simulator_mavlink/: sitl_targets_gazebo-classic.cmake
src/modules/uxrce_dds_client/: dds_topics.yaml  generate_dds_topics.py
test/mavsdk_tests/configs/: sitl.json
